// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`\`SchoolBasicInfosCard\` > should render empty fields if all data is undefined 1`] = `
"<!-- Basic Info Section -->
<div class="bg-white flex flex-col w-full rounded shadow-sm p-6 gap-10 justify-between">
  <div class="flex flex-col gap-4 md:flex-row md:gap-10">
    <div class="flex flex-col gap-2 w-72">
      <p class="text-sm font-bold uppercase text-primary"># Id</p>
      <p class="text-md text-gray-700 overflow-auto"></p>
    </div>
    <div class="flex flex-col gap-2 w-72">
      <p class="text-sm font-bold uppercase text-primary">Nome completo</p>
      <p class="text-md text-gray-700 overflow-auto"></p>
    </div>
    <div class="flex flex-col gap-2 w-72">
      <p class="text-sm font-bold uppercase text-primary">Contato</p>
      <p class="text-md text-gray-700 overflow-auto"></p>
    </div>
    <div class="flex flex-col gap-2 w-72">
      <p class="text-sm font-bold uppercase text-primary">Tipo de escola</p>
      <p class="text-md text-gray-700 overflow-auto"></p>
    </div>
    <div class="flex flex-col gap-2 w-72">
      <p class="text-sm font-bold uppercase text-primary">Categoria escolar</p>
      <p class="text-md text-gray-700 overflow-auto"></p>
    </div>
  </div>
  <div class="flex flex-col gap-4 md:flex-row md:gap-10">
    <div class="flex flex-col gap-2 w-72">
      <p class="text-sm font-bold uppercase text-primary">Endereço</p>
      <p class="text-md text-gray-700 overflow-auto"></p>
    </div>
    <div class="flex flex-col gap-2 w-72">
      <p class="text-sm font-bold uppercase text-primary">Cidade</p>
      <p class="text-md text-gray-700 overflow-auto"></p>
    </div>
    <div class="flex flex-col gap-2 w-72">
      <p class="text-sm font-bold uppercase text-primary">Estado</p>
      <p class="text-md text-gray-700 overflow-auto"></p>
    </div>
    <div class="flex flex-col gap-2 w-72">
      <p class="text-sm font-bold uppercase text-primary">CEP</p>
      <p class="text-md text-gray-700 overflow-auto"></p>
    </div>
  </div>
  <div class="flex flex-col gap-4 md:flex-row md:gap-10">
    <div class="flex flex-col gap-2">
      <p class="text-sm font-bold uppercase text-primary">Perfil CPS</p><a target="_blank" class="text-md text-gray-700 overflow-auto hover:text-primary hover:underline"></a>
    </div>
    <div class="flex flex-col gap-2">
      <p class="text-sm font-bold uppercase text-primary">Website</p><a target="_blank" class="text-md text-gray-700 overflow-auto hover:text-primary hover:underline"></a>
    </div>
  </div>
</div>"
`;

exports[`\`SchoolBasicInfosCard\` > should render fields if all data is provided 1`] = `
"<!-- Basic Info Section -->
<div class="bg-white flex flex-col w-full rounded shadow-sm p-6 gap-10 justify-between">
  <div class="flex flex-col gap-4 md:flex-row md:gap-10">
    <div class="flex flex-col gap-2 w-72">
      <p class="text-sm font-bold uppercase text-primary"># Id</p>
      <p class="text-md text-gray-700 overflow-auto">1</p>
    </div>
    <div class="flex flex-col gap-2 w-72">
      <p class="text-sm font-bold uppercase text-primary">Nome completo</p>
      <p class="text-md text-gray-700 overflow-auto">long name</p>
    </div>
    <div class="flex flex-col gap-2 w-72">
      <p class="text-sm font-bold uppercase text-primary">Contato</p>
      <p class="text-md text-gray-700 overflow-auto">1234567890</p>
    </div>
    <div class="flex flex-col gap-2 w-72">
      <p class="text-sm font-bold uppercase text-primary">Tipo de escola</p>
      <p class="text-md text-gray-700 overflow-auto">A</p>
    </div>
    <div class="flex flex-col gap-2 w-72">
      <p class="text-sm font-bold uppercase text-primary">Categoria escolar</p>
      <p class="text-md text-gray-700 overflow-auto">X</p>
    </div>
  </div>
  <div class="flex flex-col gap-4 md:flex-row md:gap-10">
    <div class="flex flex-col gap-2 w-72">
      <p class="text-sm font-bold uppercase text-primary">Endereço</p>
      <p class="text-md text-gray-700 overflow-auto">st. somewhere</p>
    </div>
    <div class="flex flex-col gap-2 w-72">
      <p class="text-sm font-bold uppercase text-primary">Cidade</p>
      <p class="text-md text-gray-700 overflow-auto">city</p>
    </div>
    <div class="flex flex-col gap-2 w-72">
      <p class="text-sm font-bold uppercase text-primary">Estado</p>
      <p class="text-md text-gray-700 overflow-auto">state</p>
    </div>
    <div class="flex flex-col gap-2 w-72">
      <p class="text-sm font-bold uppercase text-primary">CEP</p>
      <p class="text-md text-gray-700 overflow-auto">10101</p>
    </div>
  </div>
  <div class="flex flex-col gap-4 md:flex-row md:gap-10">
    <div class="flex flex-col gap-2">
      <p class="text-sm font-bold uppercase text-primary">Perfil CPS</p><a href="www.cps.com" target="_blank" class="text-md text-gray-700 overflow-auto hover:text-primary hover:underline">www.cps.com</a>
    </div>
    <div class="flex flex-col gap-2">
      <p class="text-sm font-bold uppercase text-primary">Website</p><a href="www.website.com" target="_blank" class="text-md text-gray-700 overflow-auto hover:text-primary hover:underline">www.website.com</a>
    </div>
  </div>
</div>"
`;
